--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <script defer data-domain="peopleparty.nl" src="https://plausible.siemgerritsen.nl/js/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Party People</title>
   </head>
