--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
       src="https://plausible.siemgerritsen.nl/js/script.js"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Party People</title>
+    <title>People Party!</title>
   </head>
   <body>
     <div id="app"></div>
