Fix highwayhustle obstacles at (0,0), general enhancements + memory mixer bugfixes and remove max players on tiles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="screen-orientation" content="portrait" />
     <link rel="icon" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +19,6 @@
       data-domain="peopleparty.nl"
       src="https://plausible.siemgerritsen.nl/js/script.js"
     ></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>People Party!</title>
   </head>
   <body>
